--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
     img {
       padding: var(--spacing);
-      
+      background: var(--base);
+      filter: blur(var(--blur));
     }
 
     /*
